decrease list avatar cells’ gap to prevent single column layout

--- a/client/stylesheets/components/_avatars.scss
+++ b/client/stylesheets/components/_avatars.scss
@@ -6,7 +6,7 @@
   margin: n() r(-2);
 }
 .list--avatar__cell {
-  margin: 0 r(2) r(4);
+  margin: 0 r(1) r(4);
   width: r(20);
 }
 
